[package]
name = "beep-knobs"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
sciter-rs = "0.5.57"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "Beep Knobs"
LegalCopyright = "Copyright © Girkov Arpa 2021"
FileDescription = "Beep Knobs: Generate beeps of specific frequency, volume, and duration."
ProductName = "Beep Knobs"
ProductVersion = "0.1.0"